--- a/project1.html
+++ b/project1.html
@@ -8,7 +8,7 @@
             font-family: Arial, sans-serif;
             background-color: #f8f8f8;
             margin: 0;
-            padding: 20px;
+            padding: 20px 30px 20px 45px;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -16,8 +16,8 @@
 
         header {
             text-align: center;
-            font-size: 24px;
-            margin-bottom: 20px;
+            font-size: 27px;
+            margin-bottom: 25px;
             color: #007bff;
         }
 
@@ -29,7 +29,7 @@
 
         nav a {
             text-decoration: none;
-            margin: 0 10px;
+            margin: 0 13px;
         }
 
         button {
@@ -43,18 +43,18 @@
 
         section {
             background-color: #fff;
-            padding: 20px;
+            padding: 50px;
             border: 1px solid #ff0000;
             margin-bottom: 20px;
-            width: 80%;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+            width: 93%;
+            box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.2);
             text-align: center; /* Center align the content */
             border-radius: 5px;
         }
 
         figure {
             text-align: center;
-            margin-bottom: 15px;
+            margin-bottom: 30px;
         }
 
         img {
@@ -76,17 +76,17 @@
         input,
         button {
             display: block;
-            margin-bottom: 10px;
-            padding: 10px;
+            margin-bottom: 5px;
+            padding: 15px;
             border: 1px solid #ddd;
-            border-radius: 5px;
-            width: 100%;
+            border-radius: 40px;
+            width: 98%;
         }
 
         aside {
             background-color: #f5f5f5;
             padding: 10px;
-            border: 1px solid #ddd;
+            border: 2px solid #ddd;
             color: #333;
             border-radius: 5px;
         }
